Add mock for convert*

--- a/app/index.html
+++ b/app/index.html
@@ -30,22 +30,70 @@
             </div>
 
             <div class="row">
-                <div class="col-md-6">
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-upload"></span> Upload your image.
+                <!-- base image workspace -->
+                <div class="col-md-3 base-img-workspace">
+                    <h4 class="workspace-title">Your images</h4>
+                    <div class="base-img-wrapper">
+                        <img class="base-img" src="/images/base/icon1.png">
+                    </div>
+                    <select>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                    </select>
+                    <button type="button" class="btn btn-default upload-img-btn">
+                        <span class="glyphicon glyphicon-upload"></span> Upload your image
                     </button>
+                    <div class="workspace-setting">
+                        <a href="#"><span class="glyphicon glyphicon-cog"></span> settings</a>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <ul class="decorations">
-                        <select>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
-                    </ul>
+
+                <!-- interval -->
+                <div class="col-md-1 interval">
+                    <div class="plus"><span>+</span></div>
+                </div>
+
+                <!-- decoration image workspace -->
+                <div class="col-md-3 base-img-workspace">
+                    <h4 class="workspace-title">Decorations</h4>
+                    <div class="base-img-wrapper">
+                        <img class="base-img" src="/images/base/icon1.png">
+                    </div>
+                    <select>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                        <option value="/images/base/icon1.png">/images/base/icon1.png</option>
+                    </select>
+                    <button type="button" class="btn btn-default upload-img-btn">
+                        <span class="glyphicon glyphicon-upload"></span> Upload your decoration
+                    </button>
+                    <div class="workspace-setting">
+                        <a href="#"><span class="glyphicon glyphicon-cog"></span> settings</a>
+                    </div>
+                </div>
+
+                <!-- interval -->
+                <div class="col-md-1 interval right-arrow">
+                    <span class="glyphicon glyphicon-arrow-right"></span>
+                </div>
+
+                <!-- result image -->
+                <div class="col-md-4 base-img-workspace">
+                    <h4 class="workspace-title">Result</h4>
+                    <div class="base-img-wrapper">
+                        <img class="base-img" src="/images/base/icon1.png">
+                    </div>
+                    <button type="button" class="btn btn-primary">Convert</button>
+                    <button type="button" class="btn btn-default">
+                        <span class="glyphicon glyphicon-download"></span> Download
+                    </button>
                 </div>
             </div>
 
